--- a/SimpleLocationWeb/SimpleLocationWeb.csproj
+++ b/SimpleLocationWeb/SimpleLocationWeb.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\SimpleLocationDataAccess\SimpleLocation.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Customer\" />
+  </ItemGroup>
+
 </Project>
