Suppresion des class MenuItem et CarType et Creation des class CarBrand et Car

--- a/SimpleLocationWeb/SimpleLocationWeb.csproj
+++ b/SimpleLocationWeb/SimpleLocationWeb.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Pages\Customer\" />
-    <Folder Include="wwwroot\images\menuItems\" />
+    <Folder Include="wwwroot\images\cars\" />
   </ItemGroup>
 
 </Project>
